Revision history for XML-Printer-ESCPOS

0.05    2017-04-22
    - Added repeat tag.
    - Added tags set and unset for defining global defaults.

0.03    2017-02-15
    - Added automatic word wrapping for simple <text> and for <utf8ImagedText>.

0.02    2017-02-13
    - Improved synopsis.

0.01    2017-02-12
    - First version, released on an unsuspecting world.
