@@ -21,6 +21,7 @@ t/11-reset-error-message.t
 t/12-tab-positions.t
 t/13-repeat.t
 t/14-set-unset.t
+t/15-justify.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
