@@ -3,6 +3,7 @@ Revision history for XML-Printer-ESCPOS
 0.05    2017-04-22
     - Added repeat tag.
     - Added tags set and unset for defining global defaults.
+    - Added justify tag.
 
 0.03    2017-02-15
     - Added automatic word wrapping for simple <text> and for <utf8ImagedText>.
